[tool.poetry]
name = "ob-dba-agent"
version = "0.1.0"
description = ""
authors = ["shanhaikang.shk <shanhaikang.shk@oceanbase.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
agentuniverse = "^0.0.9"
flagembedding = "^1.2.10"
pymilvus = "^2.4.4"
tomli = "^2.0.1"
pydantic = "^2.8.2"
fastapi = "^0.111.0"
pytesseract = "^0.3.10"
bs4 = "^0.0.2"

[[tool.poetry.source]]
name = "china"
url = "https://pypi.antfin-inc.com/simple/"
priority = "primary"

[[tool.poetry.source]]
name = "pipy"
url = "https://pypi.org/simple/"
priority = "supplemental"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
